--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "sass": "^1.79.4",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
